fix: eslintrc requires

--- a/tests/files/typescript-d-ts/.eslintrc
+++ b/tests/files/typescript-d-ts/.eslintrc
@@ -3,7 +3,7 @@
     {
       "files": "**.ts",
       "parser": "@typescript-eslint/parser",
-      "extends": "../../../config/typescript",
+      "extends": "../../../eslintrc/typescript",
       "rules": {
         "import/export": "error",
       },
